@@ -1,3 +1,8 @@
+2009-03-09  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* pj_init.c, pj_mutex.c, pj_initcache.c: Introduced in-memory caching
+	of init file search results.
+
 2009-03-08	IGNF <didier.richard@ign.fr>
 
 	* src/PJ_gstmerc.c: Correction of a bug in inv() function :
